--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,43 +4,35 @@ body {
     margin-bottom: 30px;
     margin-left: 40px;
     margin-right: 50px;
+    width: 1050px;
 }
-
-#blocpage {
-    width: 1100px;
-    margin: 10px;
-}
-
 
 
 /* header */
 
 #logo {
-   display: flex;
+    display: flex;
    flex-direction: row;
-    align-items: baseline;
     height: 40px;
     width: 80px;
 }
 
 #menus {
-    margin: 0%;
-    padding: 0%;
-    float: center;
     position: absolute;
-    top: 20px;
     width: 25%;
     right: 0px;
+    top: 10px;
 }
-
 
 #menus li {
     float: left;
-    display: inline;
     padding: 4%;
-    margin: 0%;
+    margin: 0%; 
 }
 
+.inscrip {
+    color: blue;
+}
 .blue {
     color: blue;
 }
@@ -55,6 +47,7 @@ a {
     border-color: blue;
     text-decoration: none;
 }
+
 
 h1 {
     font-size: 20px;
@@ -100,6 +93,7 @@ p {
 
 button {
     background-color:#0065FC;
+    border-color: #0065FC;
     color: white;
     border-radius: 0px 12px 12px 0px;
     height: 42px;
@@ -123,7 +117,10 @@ button {
     color: black;
     text-align: left;
     font-weight: bold;
+    margin-top: 0px;
+    font-size: 15px;
 }
+
 .ico {
     display: flex;
     justify-content: flex-start;
@@ -132,27 +129,31 @@ button {
 
 .aco {
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 .eco {
     display: flex;
     flex-wrap: wrap;
     margin-left: 30px;
-    border: 2px solid;
-    border-radius: 20px;
     color: #F2F2F2;
     block-size: 40px;
-    padding-bottom: 5px;
-    padding-top: 0px;
-}
+    border: 3px solid #F2F2F2;
+    border-radius: 20px;
+    border-left: none;
+    height: 35px;
+    
+  }
+
+
 
 .icone {
-    display: inline-block;
-    box-shadow: 0px 0px 2px #888;
     border-radius: 100%;
+    width: 20px;
+    height: 20px;
     background-color: #DEEBFF;
     padding: 0.5em 0.5em;
     text-align: center;
+    margin-top: 0px;
     }
 
 .infofiltres {
@@ -162,24 +163,24 @@ button {
 }
 
 .in {
-    color: #0065FC;
-   border: 2px solid #DEEBFF;
-   border-radius: 100%;
-   padding: 0.5em 0.5em;
-   text-align: center;
-}
-
-.info {
-    text-align: left;
-}
+    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #f2f2f2;
+    padding: 0.5em 0.5em;
+    text-align: center;
+    }
+    
+    .info {
+        margin-left: 10px;
+   }
 
 /* SECTION HEBERGEMENTS */
 
 #Hébergements {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 88%;
-    height: 0%;
+    width: 93%;
     margin-bottom: 0px;
     margin-top: 0px;
 }
@@ -203,6 +204,7 @@ h2 {
     background-color: white;
     border-radius: 20px;
     width: 260px;
+    height: 210px;
     margin: 0;
     padding: 0;
     margin-top: 30px;
@@ -232,16 +234,20 @@ i.far {
 
 }
 
-.nuit {
-    color: black;
-    padding-left: 10px;
-}
 
 .star {
     font-size: 12px;
     color: #0065FC;
+    margin-top: -10px;
     margin-left: 10px;
 }
+.prix {
+    color: black;
+    font-size: 15px;
+    margin-left: 10px;
+    margin-top: 3px;
+}
+
 
 /* ASIDE */
 
@@ -250,7 +256,7 @@ aside {
     background-color: #F2F2F2;
     border-radius: 20px;
     width: 30%;
-    height: 95%;
+    height: 84%;
     position: absolute;
     left: 69%;
     top: 50%;
@@ -259,35 +265,37 @@ aside {
 h3 {
     font-weight: bold;
     padding-left: 40px;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     color: black;
-    padding-top: 10px;
+    padding-top: 5px;
    
    }
 
 aside img {
     border-radius: 20px 0px 0px 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
     padding-left: 5px;
     height: 140px;
     width: 150px;
 
 }
+.popul2, .popul3 {
+    margin-top: 20px;
+}
 
-.popul {
+.popul, .popul2, .popul3 {
     display: flex;
-    padding-top: 5px;
+    padding-top: 10px;
     background-color: white;
     border-radius: 20px;
+    height: 145px;
     padding-top: 5px;
 }
 
 .fleche {
     position: absolute;
-    left: 350px;
+    left: 400px;
     top: 20px;
-    color: #0065FC;
+    color: black;
     font-size: 20px;
     }
 
@@ -296,25 +304,23 @@ aside img {
     font-size: 15px;
     color: black;
     font-weight: bold;
-    padding-left: 10px;
+    padding-left: 0px;
+    padding-top: 10px;
 }
 
 .star2{
     font-size: 12px;
     color: #0065FC;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-left: 10px;
 }
-.prix {
+
+
+.nuit {
     color: black;
-    font-size: 15px;
-    margin-left: 10px;
+    padding-left: 10px;
 }
 
-.titre_aside {
-    padding-top: 100px;
-    color: black;
-}
 
 /* SECTION ACTIVITES */
 
@@ -323,11 +329,12 @@ aside img {
     width: 130%;
     height: 20%;
     margin-bottom: 5%;
-    margin-top: 40px;
+    margin-top: 50px;
     }
 
-h4 {
+h5 {
     font-size: 20px;
+    margin-bottom: 10px;
     }
 
 #Acti {
@@ -336,87 +343,119 @@ h4 {
     margin-left: -3%;
    }
 
+   .To {
+    margin-left: -25px;
+}
+
+.To2 {
+    margin-left: -30px;
+}
+
 #legende {
     color: black;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 0px;
 }
 
 .Port  {
     margin-top: 10px;
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
-    
-    background-color: white;   
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
+    background-color: white; 
+    width: 320px;  
+    height: 450px;
 }
 .Port img {
-    width: 300px;
-    height: 400px;
+    width: 320px;
+    height: 410px;
     border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 .Fort {
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
     background-color: white;
+    width: 320px;
+    height: 250px;
     margin-top: 10px;
-    block-size: 250px;
+    
 }
 
 .Fort img {
-    width: 300px;
+    width: 320px;
+    border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 .Ile {
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
     background-color: white;
-    block-size: 170px;
     margin-top: 40px;
+    width: 320px;
 }
 
 .Ile img {
-    width: 300px;
+    width: 320px;
     height: 120px;
+    border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 .Calanques {
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
     background-color: white;
-    block-size: 450px;
+    width: 320px;
+    margin-left: 10px;
+    margin-top: 10px;
     }
 
 .Calanques img {
-    width: 300px;
-    height: 400px;
+    width: 320px;
+    height: 410px;
+    border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 .NotreDame {
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
     background-color: white;
-    block-size: 200px;
+    width: 320px;
+    margin-top: 10px;
 }
 
 .NotreDame img {
-    width: 300px;
-    height: 150px;
+    width: 320px;
+    height: 165px;
+    border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 .Longchamp {
     border-radius: 20px;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 2px 2px 2px 2px #F2F2F2;
     background-color: white;
+    width: 320px;
     margin-top: 40px;
 }
 
 .Longchamp img {
-    width: 300px;
-    height: 150px;
+    width: 320px;
+    height: 165px;
+    border-radius: 20px 20px 0px 0px;
+    margin-left: -8px;
+    margin-top: -10px;
 }
 
 /* FOOTER */
@@ -427,11 +466,19 @@ footer {
     justify-content: flex-start;
     float: center;
     position: absolute;
-    width: 100%;
+    width: 120%;
     margin-left: -50px;
 }
+
 ul {
     list-style-type: none;
+}
+
+h4 {
+    margin-left: 50px;
+}
+.foot {
+    color: black;
 }
 
 .bloc2 {
@@ -442,6 +489,15 @@ ul {
     margin-left: 20%;
 }
 
+
+/* RESPONSIVE */
+
+@media all and (max-width : 960px) {
+   #Hebergements {
+
+   }
+}
+    
 
 
 
